--- a/Project/portflio/package.json
+++ b/Project/portflio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://smartthug.github.io/portflio",
   "name": "portflio",
   "private": true,
   "version": "0.0.0",
@@ -7,12 +8,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predepoly":"npm run build",
+    "depoly":"gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "animejs": "^3.2.2",
     "framer-motion": "^12.6.3",
+    "gh-pages": "^6.3.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
