--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://smartthug.github.io/Portflio",
+  "homepage": "https://smartthug.github.io/Portfolio",
   "name": "portflio",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+     "deploy":"gh-pages -d dist"
      
   },
   "dependencies": {
